tests/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs-3.stderr
error: lifetime may not live long enough
  --> $DIR/ex3-both-anon-regions-both-are-structs-3.rs:7:5
   |
LL | fn foo(mut x: Ref) {
   |        -----
   |        |
   |        has type `Ref<'_, '1>`
   |        has type `Ref<'2, '_>`
LL |     x.a = x.b;
   |     ^^^^^^^^^ assignment requires that `'1` must outlive `'2`
   |
help: consider introducing a named lifetime parameter
   |
LL | fn foo<'a>(mut x: Ref<'a, 'a>) {
   |       ++++           ++++++++

error: aborting due to 1 previous error

